--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "Web App Dev Environment",
   "scripts": {
+    "prestart": "babel-node scripts/start_message.js",
+    "start":"babel-node scripts/server.js"
   },
   "author": "Developer Name",
   "license": "MIT",
