--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "test:watch": "npm run test -- --watch",
     "generate-mock-data":"babel-node scripts/generate_mock_data.js",
     "prestart-mockapi":"npm run generate-mock-data",
-    "start-mockapi": "json-server --watch src/api/db.json --port 3001"
+    "start-mockapi": "json-server --watch src/api/db.json --port 3001",
+    "clean-dist":"rimraf ./dist && mkdir dist",
+    "prebuild":"npm-run-all clean-dist test lint",
+    "build":"babel-node scripts/build.js",
+    "postbuild":"babel-node scripts/prod_server.js"
   },
   "author": "Developer Name",
   "license": "MIT",
